Provide complete set of ICAO type codes to frontend
